--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,6 +93,10 @@
         <activity android:name="education.hry.pkl.cricket11.ui.Activity.ResetPasswordActivity"
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
             android:screenOrientation="portrait" />
+
+        <activity android:name=".ui.Activity.PlayerDetailActivity"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
