--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,22 +15,25 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name="education.hry.pkl.cricket11.app.MyApplication"
+        android:name=".app.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true">
-        <activity android:name="education.hry.pkl.cricket11.ui.Activity.ForgetPasswordActivity" />
-        <activity android:name="education.hry.pkl.cricket11.roomdb.UpdateTaskActivity" />
-        <activity android:name="education.hry.pkl.cricket11.roomdb.AddTaskActivity" />
-        <activity android:name="education.hry.pkl.cricket11.roomdb.RoomDBMainActivity" />
-        <activity android:name="education.hry.pkl.cricket11.ui.Activity.NotificationDetailActivity" />
-        <activity android:name="education.hry.pkl.cricket11.ui.Activity.NotificationsActivity" />
-        <activity android:name="education.hry.pkl.cricket11.ui.Activity.ProfileActivity" />
+        <activity
+            android:name=".ui.Activity.CareerStatisticsActivity"
+            android:exported="true" />
+        <activity android:name=".ui.Activity.ForgetPasswordActivity" />
+        <activity android:name=".roomdb.UpdateTaskActivity" />
+        <activity android:name=".roomdb.AddTaskActivity" />
+        <activity android:name=".roomdb.RoomDBMainActivity" />
+        <activity android:name=".ui.Activity.NotificationDetailActivity" />
+        <activity android:name=".ui.Activity.NotificationsActivity" />
+        <activity android:name=".ui.Activity.ProfileActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -57,7 +60,7 @@
             android:resource="@array/preloaded_fonts" />
 
         <activity
-            android:name="education.hry.pkl.cricket11.ui.Activity.GalleryActivity"
+            android:name=".ui.Activity.GalleryActivity"
             android:label="@string/title_activity_maps">
 
             <!-- <intent-filter> -->
@@ -67,7 +70,7 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
-        <activity android:name="education.hry.pkl.cricket11.ui.Activity.MainActivity">
+        <activity android:name=".ui.Activity.MainActivity">
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
@@ -76,7 +79,8 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
-        <activity android:name="education.hry.pkl.cricket11.ui.splash.SplashActivity"
+        <activity
+            android:name=".ui.splash.SplashActivity"
             android:theme="@style/AppFullScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -85,18 +89,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="education.hry.pkl.cricket11.ui.Activity.LoginActivity"
+            android:name=".ui.Activity.LoginActivity"
             android:screenOrientation="portrait" />
-        <activity android:name="education.hry.pkl.cricket11.ui.Activity.WelcomeActivity"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
-            android:screenOrientation="portrait" />
-        <activity android:name="education.hry.pkl.cricket11.ui.Activity.ResetPasswordActivity"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
-            android:screenOrientation="portrait" />
-
-        <activity android:name=".ui.Activity.PlayerDetailActivity"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.Activity.WelcomeActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
+        <activity
+            android:name=".ui.Activity.ResetPasswordActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
+        <activity
+            android:name=".ui.Activity.PlayerDetailActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
     </application>
 
 </manifest>
