--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jul 31 06:48:14 IST 2021
-sdk.dir=D\:\\sdk
+#Tue Aug 03 09:48:38 IST 2021
+sdk.dir=C\:\\Users\\Govind\\AppData\\Local\\Android\\Sdk
