Matches Details done. Indiviual career done.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.Activity.MatchDetailsActivity"
+            android:exported="true" />
+        <activity
             android:name=".ui.Activity.PlayerHistoryActivity"
             android:exported="true" />
         <activity
