--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,12 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
+            android:name=".ui.Activity.RegisterUserActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.Activity.AllTeamListActivity"
             android:exported="false" />
         <activity
@@ -170,9 +176,10 @@
             android:name=".ui.Activity.PlayerDetailActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
-        <activity android:name=".ui.Activity.OpenBooksActivity"
+        <activity
+            android:name=".ui.Activity.OpenBooksActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"/>
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
 
         <meta-data
             android:name="firebase_messaging_auto_init_enabled"
